crates/wac-parser/tests/resolution/fail/no-ok-result-type/foo/bar.wat
(component
  (instance (import "x")
    (export "f" (func (result (result))))
  )
)
